short url update

--- a/pom.xml
+++ b/pom.xml
@@ -40,19 +40,25 @@
     </properties>
 
     <dependencies>
-        <!--&lt;!&ndash;mysql连接驱动&ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>mysql</groupId>-->
-            <!--<artifactId>mysql-connector-java</artifactId>-->
-            <!--<version>${mysql-connector}</version>-->
-        <!--</dependency>-->
+        <!--mysql连接驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector}</version>
+        </dependency>
 
-        <!--&lt;!&ndash; 引入mybatis &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.mybatis.spring.boot</groupId>-->
-            <!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
-            <!--<version>${mybatis.version}</version>-->
-        <!--</dependency>-->
+        <!-- 引入mybatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${durd.version}</version>
+        </dependency>
 
         <!--web项目-->
         <dependency>
